# play_with_indysdk

./: Cargo.toml
config/: agent.json  multiple.json  sample.json
src/: domain.rs  main.rs  vcx-play.rs
