[package]
name = "patrikindy"
version = "0.1.0"
authors = ["Patrik Stas <patrik.stas@absa.co.za>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#indy = "1.11.1"
indy = { path = "../indy-sdk/wrappers/rust" }
futures = "0.1.24"
tokio = "0.1.22"
tokio-core = "0.1"
libloading = "0.5.0"
libc = "0.2.60"
os_type="1.0.0"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
rmp-serde = "0.13.7"
log = "0.4.5"
pretty_env_logger = "0.2.4"
failure = "0.1.2"
named_type = "0.2.1"
named_type_derive = "0.2.1"
